# nvimium

./: .bacon-locations  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
error/src/: lib.rs
examples/do_thing/: Cargo.toml
examples/do_thing/src/: lib.rs
examples/hello-world/: Cargo.toml
examples/hello_world/: Cargo.toml
examples/hello_world/src/: lib.rs
examples/once_off_keymaps/: Cargo.toml
examples/once_off_keymaps/src/: lib.rs
examples/term_keys/: Cargo.toml
examples/term_keys/src/: lib.rs
macros/src/: lib.rs  masked_builder.rs  one_of_objects.rs
nvalloc/: Cargo.toml
nvalloc/src/: lib.rs
nvim-funcs/: Cargo.toml
nvim-funcs/src/: lib.rs
nvim-funcs/src/c_funcs/: global.rs  global_events.rs  mod.rs  vimscript.rs
nvim-funcs/src/wrappers/: global.rs  global_events.rs  mod.rs  vimscript.rs
nvim-test/: Cargo.toml
nvim-test-macro/: Cargo.toml
nvim-test-macro/src/: lib.rs
nvim-test/src/: lib.rs
nvim-types/: Cargo.toml
nvim-types/src/: arena.rs  array.rs  dictionary.rs  kvec.rs  lib.rs  nv_type.rs  object.rs  object_subs.rs  string.rs
nvim-types/src/core/: array.rs  borrowed.rs  buffer.rs  call_site.rs  dictionary.rs  error.rs  hl_group.rs  kvec.rs  lua_ref.rs  mod.rs  namespace.rs  object.rs  string.rs  tab_page.rs  window.rs
nvim-types/src/func_types/: echo.rs  feedkeys.rs  keymap_mode.rs  mod.rs
nvim-types/src/lua/: box_fn.rs  closure.rs  fn_ptr.rs  mod.rs
nvim-types/src/lua/core/: array.rs  boolean.rs  buffer.rs  dict.rs  hl_group.rs  integer.rs  lua_ref.rs  mod.rs  namespace.rs  object.rs  string.rs  tabpage.rs  window.rs
nvim-types/src/nvalloc/: mod.rs  nvdefs.rs
nvim-types/src/opts/: context.rs  echo.rs  eval_statusline.rs  exec.rs  get_hl.rs  get_hl_ns.rs  get_mark.rs  mod.rs  open_term.rs  paste.rs  select_popupmenu_item.rs  set_client_info.rs  set_hl.rs  set_keymap.rs
nvim-types/src/returns/: channel_info.rs  color_map.rs  context.rs  eval_statusline.rs  get_mode.rs  mod.rs
panics/: Cargo.toml
panics/src/: lib.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
src/: allocator.rs  lib.rs  plugin.rs  test_macro_utils.rs
src/macros/: comp_unique_id.rs  constified.rs  decl_derive.rs  dict.rs  hash_face.rs  masked_builder.rs  masked_builder2.rs  mod.rs  nv_enum.rs  nvim_values.rs  thinstring.rs  tri.rs  utils.rs  zeroed_default.rs
src/nvim_funcs/: internals.rs  mod.rs
src/nvim_funcs/c_funcs/: buffer.rs  command.rs  extmark.rs  global.rs  global_events.rs  mod.rs  options.rs  tabpage.rs  vimscript.rs  win_config.rs
src/nvim_funcs/wrappers/: buffer.rs  command.rs  global.rs  global_events.rs  mod.rs  options.rs  tabpage.rs  vimscript.rs  win_config.rs
src/nvim_types/: arena.rs  iter.rs  mod.rs  object_subs.rs
src/nvim_types/args/: buf_attach_cb.rs  command.rs  create_user_command.rs  mod.rs  open_term_cb.rs  user_command.rs  user_command_complete.rs
src/nvim_types/core/: array.rs  borrowed.rs  buffer.rs  call_site.rs  dictionary.rs  error.rs  extmark.rs  hl_group.rs  kvec.rs  lua_ref.rs  mod.rs  namespace.rs  object.rs  string.rs  tab_page.rs  window.rs
src/nvim_types/func_types/: create_user_command.rs  echo.rs  feedkeys.rs  keymap_mode.rs  mod.rs
src/nvim_types/lua/: box_fn.rs  closure.rs  fn_ptr.rs  mod.rs  utils.rs
src/nvim_types/lua/core/: array.rs  boolean.rs  buffer.rs  dict.rs  hl_group.rs  integer.rs  lua_ref.rs  mod.rs  namespace.rs  object.rs  string.rs  tabpage.rs  window.rs
src/nvim_types/nvalloc/: mod.rs  nvdefs.rs
src/nvim_types/opts/: buf_attach.rs  buf_delete.rs  context.rs  create_user_command.rs  echo.rs  eval_statusline.rs  exec.rs  get_commands.rs  get_hl.rs  get_hl_ns.rs  get_mark.rs  get_text.rs  mod.rs  open_term.rs  open_win_opts.rs  option.rs  paste.rs  select_popupmenu_item.rs  set_client_info.rs  set_hl.rs  set_keymap.rs  set_mark.rs  win_opts.rs
src/nvim_types/returns/: channel_info.rs  color_map.rs  commands.rs  context.rs  eval_statusline.rs  exec2.rs  get_hl.rs  get_keymap.rs  get_mode.rs  mod.rs  options_info.rs  utils.rs
test-cdylib/: Cargo.toml
test-cdylib/src/: cargo.rs  features.rs  manifest.rs
test-cdylib/test-self-as-cdylib/: Cargo.toml
test-cdylib/test-self-as-cdylib/src/: lib.rs
tests/: mod.rs
tests/fails/: mod.rs
tests/fails/types/: borrowed_lifetimes.rs  borrowed_lifetimes.stderr  thinstring_lifetime.rs  thinstring_lifetime.stderr
thread-lock/: Cargo.toml
thread-lock/src/: lib.rs
thread_lock/: Cargo.toml
thread_lock/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
