[package]
name = "nvimium"
version = "0.1.0"
edition = "2024"


[dependencies]
nvim-types = { workspace = true }
nvim-funcs = { workspace = true }
nvim-test = { workspace = true }
macros = { workspace = true }
plugin = { path = "./plugin" }

[workspace.dependencies]
mlua-sys = { version = "0.6.7", features = ["lua51"] }
libc = { version = "0.2.169", default-features = false }
thread-lock = { path = "./thread-lock/" }
panics = { path = "./panics" }
nvim-types = { path = "./nvim-types/" }
nvim-funcs = { path = "./nvim-funcs/" }
nvim-test = { path = "./nvim-test/" }
utils = { path = "./utils" }
macros = { path = "./macros/" }
nvim-test-macro = { path = "./nvim-test-macro", default-features = false }

[workspace]
members = [ "panics", "nvim-types", "nvim-funcs", "plugin", "macros" , "nvim-test", "utils", "thread-lock"]
exclude = ["examples"]

[profile.dev]
incremental = true

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1

[features]
testing = ["nvim-funcs/testing"]
