[package]
name = "nvimium"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"


[dependencies]
nvim-test = { workspace = true }
nvim-test-macro = { workspace = true, optional = true }
libc = { workspace = true }
mlua-sys = { workspace = true }
thread-lock = { workspace = true }
panics = { workspace = true }
rand = { version = "0.9.1", features = ["small_rng"], default-features = false }

[workspace.dependencies]
mlua-sys = { version = "0.6.7", features = ["lua51"] }
libc = { version = "0.2.169", default-features = false }
thread-lock = { path = "./thread-lock/" }
panics = { path = "./panics" }
nvim-test = { path = "./nvim-test/" }
nvim-test-macro = { path = "./nvim-test-macro", default-features = false }

[workspace]
members = ["panics", "nvim-test", "thread-lock"]
exclude = ["examples"]

[workspace.package]
version = "0.1.0"

[dev-dependencies]
trybuild = "1.0.104"

[profile.dev]
incremental = true

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1

[features]
testing = ["dep:nvim-test-macro", "nvim-test/testing"]

[lib]
crate-type = ["cdylib", "rlib"]
