[package]
name = "nvim-funcs"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { workspace = true }
nvim-types = { workspace = true }
macros = { workspace = true }
nvim-test = { workspace = true }
thread-lock = { workspace = true }

[features]
testing = ["nvim-test/testing"]
default = ["testing"]

[lib]
crate-type = ["cdylib", "rlib"]
