[package]
name = "nvim-test-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.99", features = ["full"], optional = true }
quote = { version = "1.0.39", optional = true }
proc-macro2 = { version = "1.0.94", optional = true }

[features]
testing = ["dep:syn", "dep:quote", "dep:proc-macro2"]
