[package]
name = "test-cdylib"
version = "1.1.0"
authors = ["Jason Newcomb <jsnewcomb@pm.me>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jarcho/test-cdylib"
description = "Library for dynamically linking to cdylib projects from test code."
exclude = [
    "test-self-as-cdylib/*",
    ".github/*",
]
readme = "README.md"

[[example]]
name = "test_example"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.103" }
serde_json = "1.0"
toml = "0.8.20"
cargo_metadata = "0.19.2"

[dev-dependencies]
dlopen = "0.1.8"
once_cell = "1.0"
