[package]
name = "hello_world"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
nvimium = { path = "../../" }

[features]
# You will definitely want to add a testing feature gate to avoid terrible compile times
# You should only enable this when testing, but it is set as the default here for better readability in editors.
default = ["testing"]
testing = ["nvimium/testing"]
